@@ -1,2 +1,3 @@
 DIST xemacs-base-2.41-pkg.tar.gz 578050 SHA256 0bfd495dcfdf5d94bb3198ebd26b07bb11ac7ce413ef0433d3c3344d7ee600e0 SHA512 c9eb8027fc591b2363492e4368708f41c6e0d3a15e099f213260ec27719f09bab7e8e2eb9d32f52ff98208122fdb6e665f5ab7ce3137f8d83fe5b823374d37ea WHIRLPOOL 2cb54d19eaa4b363afa1ad58310aa9bbbd5419599d1210c1a3a98bd8a74f6cde95f74892a0894410656ca9e60bc5422805ef67b8f887a48cbb9ac8b1c5c81da9
 DIST xemacs-base-2.42-pkg.tar.gz 579029 SHA256 d5d49df16398282ac5533e21a41535a8202dd8acc782035f410d8ca04cb90c8b SHA512 d00dd79860a30f5f211cd0be0f5ba57a3e83a1c2aa27f47cc196e5be05bf0c29d2aea5002a59f571c42293292516dfffbd80ddc5b6c93e89d1ecac40c536f33d WHIRLPOOL 6674c3a179f183575b5e101764376c9149640cd3ddf7e5d1a02404e397de0624aa7b1f7cd104cad04eec02c9fdd8bef41bfabccee4b68a6482a3a1d2581658a0
+DIST xemacs-base-2.43-pkg.tar.gz 580213 SHA256 e0d6acd47cf5fce831794105de18ea933a4f18bd591224ef5d03b83a61e8ac21 SHA512 83cb2b6fdc0d5cd014c24473031d460234706953fc4f2210d5b1580a85cae367926b79bd9e44010184e1e58fb98f77d9127de8700a4180aa83555cdbf67f32e3 WHIRLPOOL aef2dca29c1f3f599708c0c1fc2f60ae92a4105c949c018d546b2349b38e79149e4ed6e79e648bbb7a84638e5c955dff93e8d7e05bcc0267cd81fa126dc4db1d
